rename and add class

--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -3,7 +3,7 @@
 <% } %>
 <ul id='shared-header'>
   <% links.map(link) %>
-<li>
+<li class='shared-header-search'>
 <form action='http://google.com/search' method='get' accept-charset='UTF-8'>
 <input type='text' name='q' value='' size='17' maxlength='255'>
 <input type='submit' name='op' value='Search'>
