add configurability to search and additional footer boxen, special unicorn winker

--- a/lib/poo-footer.ejs
+++ b/lib/poo-footer.ejs
@@ -1,6 +1,9 @@
 <% function link(link) { %>
 <li><a href='<%= link.url %>' title='<%= link.title %>'><%= link.text %></a></li>
 <% } %>
+<%function footerbox(box) { %>
+<li><%= box %></li>
+<% } %>
 <div id='shared-footer'>
   <ul id='impressum'>
     <li id='footer-box-amp'>
@@ -27,6 +30,7 @@
       <ul id='a365-recent'>
       </ul>
     </li>
+    <% sites[sitename].footerboxes.map(footerbox); %>
   </ul>
   <br style='clear:both' />
   <ul id='footer-networklinks'>
