--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -3,16 +3,16 @@
 <% } %>
 <ul id='shared-header'>
   <% links.map(link) %>
-<li class='shared-header-search'>
-<form action='http://google.com/search' method='get' accept-charset='UTF-8'>
-<input type='text' name='q' value='' size='17' maxlength='255'>
-<input type='submit' name='op' value='Search'>
-<input type='hidden' name='q' value='site:alliedmedia.org' />
-</form>
-<span id='search-chooser'>
-<a id='search-all' href='#' style='font-size:.8em;text-transform: uppercase;outline:0;background:#fef100'>All AMP sites</a>
-<span style='font-size:.8em;text-transform:uppercase;'> or </span>
-<a id='search-this' href='#' style='font-size:.8em;text-transform:uppercase;outline:0'>This site</a>
-</span>
-</li>
+  <li class='shared-header-search'>
+  <form id='shared-header-search-form' action='https://www.google.com/search' method='get' accept-charset='UTF-8'>
+    <input type='text' id='shared-header-search-q' name='q' value='' size='17' maxlength='255'>
+    <input type='submit' name='op' value='Search'>
+    <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' />
+  </form>
+  <span id='search-chooser'>
+    <a id='shared-header-search-toggle-all' href='#' style='font-size:.8em;text-transform: uppercase;outline:0;background:#fef100'>Search all AMP sites with Google</a>
+    <span style='font-size:.8em;text-transform:uppercase;'> or </span>
+    <a id='shared-header-search-toggle-this' href='#' style='font-size:.8em;text-transform:uppercase;outline:0'>Search this site with our search</a>
+  </span>
+  </li>
 </ul>
