--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -4,15 +4,15 @@
 <ul id='shared-header'>
   <% links.map(link) %>
   <li class='shared-header-search'>
-  <form id='shared-header-search-form' action='https://www.google.com/search' method='get' accept-charset='UTF-8'>
-    <input type='text' id='shared-header-search-q' name='q' value='' size='17' maxlength='255'>
+  <form id='shared-header-search-form' action='<%= sites[sitename].search.action %>' method='<% sites[sitename].search.method %>' accept-charset='UTF-8'>
+    <input type='text' id='shared-header-search-q' name='<%= sites[sitename].search.name %>' value='' size='17' maxlength='255'>
     <input type='submit' name='op' value='Search'>
-    <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' />
+    <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' disabled="disabled" />
   </form>
   <span id='search-chooser'>
-    <a id='shared-header-search-toggle-all' href='#' style='font-size:.8em;text-transform: uppercase;outline:0;background:#fef100'>Search all AMP sites with Google</a>
+    <a id='shared-header-search-toggle-this' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;background:#fef100;'>Search this site with our search</a>
     <span style='font-size:.8em;text-transform:uppercase;'> or </span>
-    <a id='shared-header-search-toggle-this' href='#' style='font-size:.8em;text-transform:uppercase;outline:0'>Search this site with our search</a>
+    <a id='shared-header-search-toggle-all' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;'>Search all AMP sites with Google</a>
   </span>
   </li>
 </ul>
