output unescaped box

--- a/lib/poo-footer.ejs
+++ b/lib/poo-footer.ejs
@@ -2,7 +2,7 @@
 <li><a href='<%= link.url %>' title='<%= link.title %>'><%= link.text %></a></li>
 <% } %>
 <%function footerbox(box) { %>
-<li><%= box %></li>
+<li><%- box %></li>
 <% } %>
 <div id='shared-footer'>
   <ul id='impressum'>
