refs #3268: add feeds and async flow control

--- a/lib/poo-footer.ejs
+++ b/lib/poo-footer.ejs
@@ -1,6 +1,30 @@
 <% function link(link) { %>
 <li><a href='<%= link.url %>' title='<%= link.title %>'><%= link.text %></a></li>
 <% } %>
+<% function feeditem_amptalk(item) { %>
+<li>
+  <a title='<%= item.teaser %>' href='<%= item.url %>'>
+    <%= item.label %>
+  </a>
+  <small>upvoted on <%= item.ds_changed %></small>
+</li>
+<% } %>
+<% function feeditem_amphome(item) { %>
+<li>
+  <a title='<%= item.story.title %>' href='http://alliedmedia.org<%= item.story.path %>'>
+    <%= item.story.title %>
+  </a>
+  <small>posted <%= item.story.date %></small>
+</li>
+<% } %>
+<% function feeditem_a365(item) { %>
+<li>
+  <a title='<%= item.activity.org %> updated <%= item.activity.title %>' href='http://allied365.org<%= item.activity.path %>'>
+    <%= item.activity.org %> updated <%= item.activity.title %>
+  </a>
+  <small>posted <%= item.activity.date %></small>
+</li>
+<% } %>
 <%function footerbox(box) { %>
 <li><%- box %></li>
 <% } %>
@@ -16,18 +40,21 @@
     <li id='footer-box-amptalk'>
       <h4>AMPTalk</h4>
       <ul id='amptalk-recent'>
+        <% poofeeds.amptalk.map(feeditem_amptalk) %>
       </ul>
       <a href='http://talk.alliedmedia.org/newswire/rss-top.xml' class='feed-icon'>RSS</a>
     </li>
     <li id='footer-box-news'>
       <h4>AMP Blog</h4>
       <ul id='ampnews-recent'>
+        <% poofeeds.amphome.map(feeditem_amphome) %>
       </ul>
       <a href='http://alliedmedia.org/news/rss.xml' class='feed-icon' title='Subscribe to AMP Blog'>RSS</a>
     </li>
     <li id='footer-box-a365'>
       <h4>Allied365</h4>
       <ul id='a365-recent'>
+        <% poofeeds.a365.map(feeditem_a365) %>
       </ul>
     </li>
     <% sites[sitename].footerboxes.map(footerbox); %>
