refs #3271: make impressum configurable

--- a/lib/poo-footer.ejs
+++ b/lib/poo-footer.ejs
@@ -31,10 +31,10 @@
 <div id='shared-footer'>
   <ul id='impressum'>
     <li id='footer-box-amp'>
-      <h3>Allied Media Projects</h3>
+      <h3><%= impressum.name %></h3>
       <ul>
-        <li><strong>Media strategies for a more just and creative world.</strong></li>
-        <li><a href='http://alliedmedia.org/contact?cat=0'>Contact Us</a>.</li>
+        <li><strong><%= impressum.slogan %></strong></li>
+        <li><a href='<%= impressum.contact_link_url %>'><%= impressum.contact_link_text %></a></li>
       </ul>
     </li>
     <li id='footer-box-amptalk'>
