refs #3271 - 5: footer tweaks

--- a/public/headerfooter.css
+++ b/public/headerfooter.css
@@ -117,7 +117,7 @@
 
 
 #shared-footer ul li {
-  margin: 0;
+  margin: 0 0 5px 0;
   padding: 0;
   list-style-type: none;
   list-style-image: none;
@@ -132,9 +132,7 @@
   margin-right: 10px;
 }
 
-#amptalk-recent > li > a,
-#ampnews-recent > li > a,
-#a365-recent > li > a {
+#shared-footer li {
   font-size: 13px;
   line-height: 15px;
 }
@@ -198,5 +196,19 @@ ul#footer-networklinks {
   width: 30px;
   height: 30px;
   background: url(images/rss.png) no-repeat;
+}
+
+#shared-footer li img {
+  padding-right: 5px;
+}
+
+#shared-footer form {
+  margin: 0;
+  padding: 0;
+}
+
+#shared-footer input {
+  margin: 3px 0 0 0;
+  padding: 0;
 }
 
