start to reformat header and do site-specific formatting, add assets

--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -3,16 +3,19 @@
 <% } %>
 <ul id='shared-header'>
   <% links.map(link) %>
-  <li class='shared-header-search'>
-  <form id='shared-header-search-form' action='<%= sites[sitename].search.action %>' method='<% sites[sitename].search.method %>' accept-charset='UTF-8'>
-    <input type='text' id='shared-header-search-q' name='<%= sites[sitename].search.name %>' value='' size='17' maxlength='255'>
-    <input type='submit' name='op' value='Search'>
-    <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' disabled="disabled" />
-  </form>
-  <span id='search-chooser'>
-    <a id='shared-header-search-toggle-this' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;background:#fef100;'>Search this site with our search</a>
-    <span style='font-size:.8em;text-transform:uppercase;'> or </span>
-    <a id='shared-header-search-toggle-all' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;'>Search all AMP sites with Google</a>
-  </span>
+  <li id='shared-header-search'>
+    <span id='search-chooser'>
+      <a id='shared-header-search-toggle-this' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;background:#fef100;'>Search this site</a>
+      <span style='font-size:.8em;text-transform:uppercase;'> or </span>
+      <a id='shared-header-search-toggle-all' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;'>Google search all AMP sites</a>
+    </span>
+    <form id='shared-header-search-form' action='<%= sites[sitename].search.action %>' method='<% sites[sitename].search.method %>' accept-charset='UTF-8'>
+      <input type='text' id='shared-header-search-q' name='<%= sites[sitename].search.name %>' value='' size='17' maxlength='255'>
+      <input type='submit' name='op' value='Search'>
+      <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' disabled="disabled" />
+    </form>
+  </li>
+  <li id='shared-header-donate'>
+    <a href="https://store.alliedmedia.org">Become a sustainer</a>
   </li>
 </ul>
