refs #3267 - 16: header styles "90%" done

--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -1,21 +1,21 @@
 <% function link(link) { %>
 <li><a href='<%= link.url %>' title='<%= link.title %>'><%= link.text %></a></li>
 <% } %>
-<ul id='shared-header'>
-  <% links.map(link) %>
-  <li id='shared-header-search'>
+<header id='shared-header'>
+  <ul>
+    <% links.map(link) %>
+  </ul>
+  <a id='shared-header-donate' href="https://store.alliedmedia.org">Become a sustainer</a>
+  <div id='shared-header-search'>
     <span id='search-chooser'>
-      <a id='shared-header-search-toggle-this' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;background:#fef100;'>Search this site</a>
-      <span style='font-size:.8em;text-transform:uppercase;'> or </span>
-      <a id='shared-header-search-toggle-all' href='#' style='font-size:.8em;text-transform:uppercase;outline:0;'>Google search all AMP sites</a>
+      <a id='shared-header-search-toggle-this' href='#' style='color:#90f'>Search this site</a>
+      or
+      <a id='shared-header-search-toggle-all' href='#'>Google search all AMP sites</a>
     </span>
     <form id='shared-header-search-form' action='<%= sites[sitename].search.action %>' method='<% sites[sitename].search.method %>' accept-charset='UTF-8'>
-      <input type='text' id='shared-header-search-q' name='<%= sites[sitename].search.name %>' value='' size='17' maxlength='255'>
+      <input type='text' id='shared-header-search-q' name='<%= sites[sitename].search.name %>' value='' maxlength='255'>
       <input type='submit' name='op' value='Search'>
-      <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' disabled="disabled" />
+      <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' disabled="disabled">
     </form>
-  </li>
-  <li id='shared-header-donate'>
-    <a href="https://store.alliedmedia.org">Become a sustainer</a>
-  </li>
-</ul>
+  </div>
+</header>
