change sustainer link

--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -5,7 +5,7 @@
   <ul>
     <% links.map(link) %>
   </ul>
-  <a id='shared-header-donate' href="https://store.alliedmedia.org">Become a sustainer</a>
+  <a id='shared-header-donate' href='https://app.moonclerk.com/pay/6cstgbo9tj'>Become a sustainer</a>
   <div id='shared-header-search'>
     <span id='search-chooser'>
       <a id='shared-header-search-toggle-this' href='#' style='color:#90f'>Search this site</a>
