--- a/public/headerfooter.css
+++ b/public/headerfooter.css
@@ -152,19 +152,16 @@
   z-index: 888;
 }
 
-#sparkles {
-  background: transparent url(http://images2.layoutsparks.com/1/124954/glitter-flash-stars-blue.gif);
-  height: 80px;
-  width: 180px;
-  z-index: 777;
-}
-
 #shared-header-donate:link,
 #shared-header-donate:visited,
 #shared-header-donate:active,
 #shared-header-donate:hover {
   color: white !important;
   text-decoration: none !important;
+}
+
+#shared-header-donate:hover {
+  background-image: url(http://www.medici-giovanni.com/Noelle/animatedglitterst_red1.gif);
 }
 
 #shared-header-donate:after {
@@ -176,6 +173,13 @@
   position: absolute;
   top: 65px;
   z-index: 9999;
+}
+
+#sparkles {
+  background: transparent url(http://images2.layoutsparks.com/1/124954/glitter-flash-stars-blue.gif);
+  height: 80px;
+  width: 180px;
+  z-index: 777;
 }
 
 #shared-header.mobile #shared-header-donate {
