--- a/public/headerfooter.css
+++ b/public/headerfooter.css
@@ -161,7 +161,7 @@
 }
 
 #shared-header-donate:hover {
-  background-image: url(http://www.medici-giovanni.com/Noelle/animatedglitterst_red1.gif);
+  background-image: url(//unicornpoo.alliedmedia.org/headerfooter/glitter.gif);
 }
 
 #shared-header-donate:after {
