fix no-search situation

--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -7,6 +7,7 @@
   </ul>
   <a id='shared-header-donate' href='https://app.moonclerk.com/pay/6cstgbo9tj'>Become a sustainer</a>
   <div id='shared-header-search'>
+  <% if (sites[sitename].hasOwnProperty('search')) { %>
     <span id='search-chooser'>
       <a id='shared-header-search-toggle-this' href='#' style='color:#90f'>Search this site</a>
       or
@@ -17,5 +18,15 @@
       <input type='submit' name='op' value='Search'>
       <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org' disabled="disabled">
     </form>
+  <% } else { %>
+    <span id='search-chooser' style='background-image:none'>
+      <a id='shared-header-search-toggle-all' href='#'>Google search all AMP sites</a>
+    </span>
+    <form id='shared-header-search-form' action='//google.com/search' method='get' accept-charset='UTF-8'>
+      <input type='text' id='shared-header-search-q' name='q' value='' maxlength='255'>
+      <input type='submit' name='op' value='Search'>
+      <input type='hidden' id='shared-header-search-googleq' name='q' value='site:alliedmedia.org'>
+    </form>
+  <% } %>
   </div>
 </header>
