fix bad sitename bug

--- a/lib/poo-header.ejs
+++ b/lib/poo-header.ejs
@@ -7,7 +7,7 @@
   </ul>
   <a id='shared-header-donate' href='https://app.moonclerk.com/pay/6cstgbo9tj'>Become a sustainer</a>
   <div id='shared-header-search'>
-  <% if (sites[sitename].hasOwnProperty('search')) { %>
+  <% if (sites.hasOwnProperty(sitename) && sites[sitename].hasOwnProperty('search')) { %>
     <span id='search-chooser'>
       <a id='shared-header-search-toggle-this' href='#' style='color:#90f'>Search this site</a>
       or
