footer no-site bug fix

--- a/lib/poo-footer.ejs
+++ b/lib/poo-footer.ejs
@@ -51,7 +51,9 @@
       </ul>
       <a href='http://alliedmedia.org/news/rss.xml' class='feed-icon' title='Subscribe to AMP Blog'>RSS</a>
     </li>
-    <% sites[sitename].footerboxes.map(footerbox); %>
+    <% if (sites.hasOwnProperty(sitename)) { %>
+      <% sites[sitename].footerboxes.map(footerbox); %>
+    <% } %>
   </ul>
   <br style='clear:both' />
   <ul id='footer-networklinks'>
