--- a/public/headerfooter.css
+++ b/public/headerfooter.css
@@ -26,9 +26,6 @@
   line-height: 18px;
   font-weight: normal;
   background-color: white;
-  background-repeat: no-repeat;
-  background-position: 0 9px;
-  background-image: url(images/logo.png);
   -webkit-box-shadow:  0px 2px 2px 0px rgba(0, 0, 0, .75);
   box-shadow:  0px 2px 2px 0px rgba(0, 0, 0, .75);
   margin-bottom: -16px;
@@ -76,7 +73,7 @@
 }
 
 #shared-header ul {
-  margin: 0 0 0 140px;
+  margin: 0;
   padding: 0;
   float: left;
   position: relative;
