--- a/public/headerfooter.css
+++ b/public/headerfooter.css
@@ -96,13 +96,20 @@
   display: inline-block;
   border: 1px solid black;
   background-color: #e8e8e8;
+  margin: 0;
+  padding: 0;
+  height: 19px;
+  width: 230px;
 }
 
 #shared-header input[type="text"] {
   background: transparent;
-  border: 0;
   width: 203px;
   height: 19px;
+  border: 0;
+  outline: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #shared-header input[type="text"]:focus {
@@ -201,7 +208,7 @@
   color: #8c8c8c;
   border-top: 20px solid black;
   padding: 0 0 0 30px;
-  font: 16px/20px normal "TitilliumText22LRegular", Verdana, Geneva, "DejaVu Sans",  sans-serif;
+  font: normal 16px/20px "TitilliumText22LRegular", Verdana, Geneva, "DejaVu Sans",  sans-serif;
 }
 
 #shared-footer a {
@@ -293,7 +300,7 @@
 #shared-footer h4 {
   margin: 0 0 10px 0;
   padding: 0;
-  font: 13px/15px normal "TitilliumText22LRegular";
+  font: normal 13px/15px "TitilliumText22LRegular";
   text-transform: uppercase;
   color: #8c8c8c;
 }
@@ -344,6 +351,10 @@
 #shared-footer input[type="text"] {
   width: 160px;
   display: block;
+  border: 0;
+  outline: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #shared-footer input[type="submit"] {
